kubernates/backend.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    tier: backend
  name: backend
spec:
  containers:
  - image: 192.168.1.150:5000/my-backend
    name: backend
    ports:
    - containerPort: 3000
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: NodePort
  selector:
    tier: backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30008
